--- a/BIDC_CreditContracts/BIDC_CreditContracts.csproj
+++ b/BIDC_CreditContracts/BIDC_CreditContracts.csproj
@@ -273,6 +273,8 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="Database\DBCredit.sql" />
+    <Content Include="Database\UserScritp.sql" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
